parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    INCREMENT
    READ
    WHILESTART
    XOR
    BFPRINT
    TRUE
    COMMENT
    SENTENTIA
    GORIGHT
    GOLEFT
    STRINGSTOP
    AND
    STRINGSTART
    FALSE
    WHILEEND
    NOT
    DECREMENT
    OR

Grammar

Rule 0     S' -> base
Rule 1     base -> <empty>
Rule 2     base -> statements
Rule 3     statements -> instruction
Rule 4     statements -> statements instruction
Rule 5     instruction -> PRINT expression DOT
Rule 6     instruction -> ID ASSIGN expression DOT
Rule 7     value -> ID
Rule 8     value -> sign_arithmetic_operation ID
Rule 9     value -> term_arithmetic_operation ID
Rule 10    value -> INTEGER
Rule 11    value -> sign_arithmetic_operation INTEGER
Rule 12    value -> term_arithmetic_operation INTEGER
Rule 13    value -> REAL
Rule 14    value -> sign_arithmetic_operation REAL
Rule 15    value -> term_arithmetic_operation REAL
Rule 16    value -> LEFTPARENTHESIS expression RIGHTPARENTHESIS
Rule 17    sign_arithmetic_operation -> PLUS
Rule 18    sign_arithmetic_operation -> MINUS
Rule 19    term_arithmetic_operation -> TIMES
Rule 20    term_arithmetic_operation -> DIVIDE
Rule 21    relational_equality_operation -> EQUAL
Rule 22    relational_equality_operation -> NOTEQUAL
Rule 23    relational_inequality_operation -> LOWEREQUAL
Rule 24    relational_inequality_operation -> GREATEREQUAL
Rule 25    relational_inequality_operation -> LOWERTHEN
Rule 26    relational_inequality_operation -> GREATERTHEN
Rule 27    expression -> expression relational_equality_operation comparison
Rule 28    expression -> comparison
Rule 29    comparison -> comparison relational_inequality_operation arithmetic_expression
Rule 30    comparison -> arithmetic_expression
Rule 31    arithmetic_expression -> arithmetic_expression sign_arithmetic_operation expression_term
Rule 32    arithmetic_expression -> expression_term
Rule 33    expression_term -> expression_term term_arithmetic_operation value
Rule 34    expression_term -> value
Rule 35    if_start -> IF
Rule 36    if_expression -> expression
Rule 37    if_then_begin -> THEN BEGIN
Rule 38    if_else_begin -> ELSE BEGIN
Rule 39    instruction -> if_start if_expression if_then_begin statements END DOT
Rule 40    instruction -> if_start if_expression if_then_begin statements END if_else_begin statements END DOT
Rule 41    while_start -> WHILE
Rule 42    while_expression -> expression
Rule 43    while_body -> DO statements DONE DOT
Rule 44    instruction -> while_start while_expression while_body

Terminals, with rules where they appear

AND                  : 
ASSIGN               : 6
BEGIN                : 37 38
BFPRINT              : 
COMMENT              : 
DECREMENT            : 
DIVIDE               : 20
DO                   : 43
DONE                 : 43
DOT                  : 5 6 39 40 43
ELSE                 : 38
END                  : 39 40 40
EQUAL                : 21
FALSE                : 
GOLEFT               : 
GORIGHT              : 
GREATEREQUAL         : 24
GREATERTHEN          : 26
ID                   : 6 7 8 9
IF                   : 35
INCREMENT            : 
INTEGER              : 10 11 12
LEFTPARENTHESIS      : 16
LOWEREQUAL           : 23
LOWERTHEN            : 25
MINUS                : 18
NOT                  : 
NOTEQUAL             : 22
OR                   : 
PLUS                 : 17
PRINT                : 5
READ                 : 
REAL                 : 13 14 15
RIGHTPARENTHESIS     : 16
SENTENTIA            : 
STRINGSTART          : 
STRINGSTOP           : 
THEN                 : 37
TIMES                : 19
TRUE                 : 
WHILE                : 41
WHILEEND             : 
WHILESTART           : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

arithmetic_expression : 29 30 31
base                 : 0
comparison           : 27 28 29
expression           : 5 6 16 27 36 42
expression_term      : 31 32 33
if_else_begin        : 40
if_expression        : 39 40
if_start             : 39 40
if_then_begin        : 39 40
instruction          : 3 4
relational_equality_operation : 27
relational_inequality_operation : 29
sign_arithmetic_operation : 8 11 14 31
statements           : 2 4 39 40 40 43
term_arithmetic_operation : 9 12 15 33
value                : 33 34
while_body           : 44
while_expression     : 44
while_start          : 44

Parsing method: LALR

state 0

    (0) S' -> . base
    (1) base -> .
    (2) base -> . statements
    (3) statements -> . instruction
    (4) statements -> . statements instruction
    (5) instruction -> . PRINT expression DOT
    (6) instruction -> . ID ASSIGN expression DOT
    (39) instruction -> . if_start if_expression if_then_begin statements END DOT
    (40) instruction -> . if_start if_expression if_then_begin statements END if_else_begin statements END DOT
    (44) instruction -> . while_start while_expression while_body
    (35) if_start -> . IF
    (41) while_start -> . WHILE

    $end            reduce using rule 1 (base -> .)
    PRINT           shift and go to state 6
    ID              shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 4

    while_start                    shift and go to state 1
    statements                     shift and go to state 2
    instruction                    shift and go to state 3
    base                           shift and go to state 5
    if_start                       shift and go to state 7

state 1

    (44) instruction -> while_start . while_expression while_body
    (42) while_expression -> . expression
    (27) expression -> . expression relational_equality_operation comparison
    (28) expression -> . comparison
    (29) comparison -> . comparison relational_inequality_operation arithmetic_expression
    (30) comparison -> . arithmetic_expression
    (31) arithmetic_expression -> . arithmetic_expression sign_arithmetic_operation expression_term
    (32) arithmetic_expression -> . expression_term
    (33) expression_term -> . expression_term term_arithmetic_operation value
    (34) expression_term -> . value
    (7) value -> . ID
    (8) value -> . sign_arithmetic_operation ID
    (9) value -> . term_arithmetic_operation ID
    (10) value -> . INTEGER
    (11) value -> . sign_arithmetic_operation INTEGER
    (12) value -> . term_arithmetic_operation INTEGER
    (13) value -> . REAL
    (14) value -> . sign_arithmetic_operation REAL
    (15) value -> . term_arithmetic_operation REAL
    (16) value -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (17) sign_arithmetic_operation -> . PLUS
    (18) sign_arithmetic_operation -> . MINUS
    (19) term_arithmetic_operation -> . TIMES
    (20) term_arithmetic_operation -> . DIVIDE

    ID              shift and go to state 25
    INTEGER         shift and go to state 21
    REAL            shift and go to state 22
    LEFTPARENTHESIS shift and go to state 19
    PLUS            shift and go to state 15
    MINUS           shift and go to state 17
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 11

    arithmetic_expression          shift and go to state 10
    expression_term                shift and go to state 12
    comparison                     shift and go to state 13
    term_arithmetic_operation      shift and go to state 14
    sign_arithmetic_operation      shift and go to state 16
    while_expression               shift and go to state 18
    value                          shift and go to state 23
    expression                     shift and go to state 24

state 2

    (2) base -> statements .
    (4) statements -> statements . instruction
    (5) instruction -> . PRINT expression DOT
    (6) instruction -> . ID ASSIGN expression DOT
    (39) instruction -> . if_start if_expression if_then_begin statements END DOT
    (40) instruction -> . if_start if_expression if_then_begin statements END if_else_begin statements END DOT
    (44) instruction -> . while_start while_expression while_body
    (35) if_start -> . IF
    (41) while_start -> . WHILE

    $end            reduce using rule 2 (base -> statements .)
    PRINT           shift and go to state 6
    ID              shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 4

    while_start                    shift and go to state 1
    instruction                    shift and go to state 26
    if_start                       shift and go to state 7

state 3

    (3) statements -> instruction .

    END             reduce using rule 3 (statements -> instruction .)
    PRINT           reduce using rule 3 (statements -> instruction .)
    ID              reduce using rule 3 (statements -> instruction .)
    IF              reduce using rule 3 (statements -> instruction .)
    WHILE           reduce using rule 3 (statements -> instruction .)
    DONE            reduce using rule 3 (statements -> instruction .)
    $end            reduce using rule 3 (statements -> instruction .)


state 4

    (41) while_start -> WHILE .

    ID              reduce using rule 41 (while_start -> WHILE .)
    INTEGER         reduce using rule 41 (while_start -> WHILE .)
    REAL            reduce using rule 41 (while_start -> WHILE .)
    LEFTPARENTHESIS reduce using rule 41 (while_start -> WHILE .)
    PLUS            reduce using rule 41 (while_start -> WHILE .)
    MINUS           reduce using rule 41 (while_start -> WHILE .)
    TIMES           reduce using rule 41 (while_start -> WHILE .)
    DIVIDE          reduce using rule 41 (while_start -> WHILE .)


state 5

    (0) S' -> base .



state 6

    (5) instruction -> PRINT . expression DOT
    (27) expression -> . expression relational_equality_operation comparison
    (28) expression -> . comparison
    (29) comparison -> . comparison relational_inequality_operation arithmetic_expression
    (30) comparison -> . arithmetic_expression
    (31) arithmetic_expression -> . arithmetic_expression sign_arithmetic_operation expression_term
    (32) arithmetic_expression -> . expression_term
    (33) expression_term -> . expression_term term_arithmetic_operation value
    (34) expression_term -> . value
    (7) value -> . ID
    (8) value -> . sign_arithmetic_operation ID
    (9) value -> . term_arithmetic_operation ID
    (10) value -> . INTEGER
    (11) value -> . sign_arithmetic_operation INTEGER
    (12) value -> . term_arithmetic_operation INTEGER
    (13) value -> . REAL
    (14) value -> . sign_arithmetic_operation REAL
    (15) value -> . term_arithmetic_operation REAL
    (16) value -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (17) sign_arithmetic_operation -> . PLUS
    (18) sign_arithmetic_operation -> . MINUS
    (19) term_arithmetic_operation -> . TIMES
    (20) term_arithmetic_operation -> . DIVIDE

    ID              shift and go to state 25
    INTEGER         shift and go to state 21
    REAL            shift and go to state 22
    LEFTPARENTHESIS shift and go to state 19
    PLUS            shift and go to state 15
    MINUS           shift and go to state 17
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 11

    arithmetic_expression          shift and go to state 10
    comparison                     shift and go to state 13
    expression_term                shift and go to state 12
    sign_arithmetic_operation      shift and go to state 16
    term_arithmetic_operation      shift and go to state 14
    value                          shift and go to state 23
    expression                     shift and go to state 27

state 7

    (39) instruction -> if_start . if_expression if_then_begin statements END DOT
    (40) instruction -> if_start . if_expression if_then_begin statements END if_else_begin statements END DOT
    (36) if_expression -> . expression
    (27) expression -> . expression relational_equality_operation comparison
    (28) expression -> . comparison
    (29) comparison -> . comparison relational_inequality_operation arithmetic_expression
    (30) comparison -> . arithmetic_expression
    (31) arithmetic_expression -> . arithmetic_expression sign_arithmetic_operation expression_term
    (32) arithmetic_expression -> . expression_term
    (33) expression_term -> . expression_term term_arithmetic_operation value
    (34) expression_term -> . value
    (7) value -> . ID
    (8) value -> . sign_arithmetic_operation ID
    (9) value -> . term_arithmetic_operation ID
    (10) value -> . INTEGER
    (11) value -> . sign_arithmetic_operation INTEGER
    (12) value -> . term_arithmetic_operation INTEGER
    (13) value -> . REAL
    (14) value -> . sign_arithmetic_operation REAL
    (15) value -> . term_arithmetic_operation REAL
    (16) value -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (17) sign_arithmetic_operation -> . PLUS
    (18) sign_arithmetic_operation -> . MINUS
    (19) term_arithmetic_operation -> . TIMES
    (20) term_arithmetic_operation -> . DIVIDE

    ID              shift and go to state 25
    INTEGER         shift and go to state 21
    REAL            shift and go to state 22
    LEFTPARENTHESIS shift and go to state 19
    PLUS            shift and go to state 15
    MINUS           shift and go to state 17
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 11

    arithmetic_expression          shift and go to state 10
    comparison                     shift and go to state 13
    expression_term                shift and go to state 12
    sign_arithmetic_operation      shift and go to state 16
    term_arithmetic_operation      shift and go to state 14
    if_expression                  shift and go to state 28
    value                          shift and go to state 23
    expression                     shift and go to state 29

state 8

    (6) instruction -> ID . ASSIGN expression DOT

    ASSIGN          shift and go to state 30


state 9

    (35) if_start -> IF .

    ID              reduce using rule 35 (if_start -> IF .)
    INTEGER         reduce using rule 35 (if_start -> IF .)
    REAL            reduce using rule 35 (if_start -> IF .)
    LEFTPARENTHESIS reduce using rule 35 (if_start -> IF .)
    PLUS            reduce using rule 35 (if_start -> IF .)
    MINUS           reduce using rule 35 (if_start -> IF .)
    TIMES           reduce using rule 35 (if_start -> IF .)
    DIVIDE          reduce using rule 35 (if_start -> IF .)


state 10

    (30) comparison -> arithmetic_expression .
    (31) arithmetic_expression -> arithmetic_expression . sign_arithmetic_operation expression_term
    (17) sign_arithmetic_operation -> . PLUS
    (18) sign_arithmetic_operation -> . MINUS

    LOWEREQUAL      reduce using rule 30 (comparison -> arithmetic_expression .)
    GREATEREQUAL    reduce using rule 30 (comparison -> arithmetic_expression .)
    LOWERTHEN       reduce using rule 30 (comparison -> arithmetic_expression .)
    GREATERTHEN     reduce using rule 30 (comparison -> arithmetic_expression .)
    RIGHTPARENTHESIS reduce using rule 30 (comparison -> arithmetic_expression .)
    EQUAL           reduce using rule 30 (comparison -> arithmetic_expression .)
    NOTEQUAL        reduce using rule 30 (comparison -> arithmetic_expression .)
    DO              reduce using rule 30 (comparison -> arithmetic_expression .)
    THEN            reduce using rule 30 (comparison -> arithmetic_expression .)
    DOT             reduce using rule 30 (comparison -> arithmetic_expression .)
    PLUS            shift and go to state 15
    MINUS           shift and go to state 17

    sign_arithmetic_operation      shift and go to state 31

state 11

    (20) term_arithmetic_operation -> DIVIDE .

    ID              reduce using rule 20 (term_arithmetic_operation -> DIVIDE .)
    INTEGER         reduce using rule 20 (term_arithmetic_operation -> DIVIDE .)
    REAL            reduce using rule 20 (term_arithmetic_operation -> DIVIDE .)
    LEFTPARENTHESIS reduce using rule 20 (term_arithmetic_operation -> DIVIDE .)
    PLUS            reduce using rule 20 (term_arithmetic_operation -> DIVIDE .)
    MINUS           reduce using rule 20 (term_arithmetic_operation -> DIVIDE .)
    TIMES           reduce using rule 20 (term_arithmetic_operation -> DIVIDE .)
    DIVIDE          reduce using rule 20 (term_arithmetic_operation -> DIVIDE .)


state 12

    (32) arithmetic_expression -> expression_term .
    (33) expression_term -> expression_term . term_arithmetic_operation value
    (19) term_arithmetic_operation -> . TIMES
    (20) term_arithmetic_operation -> . DIVIDE

    PLUS            reduce using rule 32 (arithmetic_expression -> expression_term .)
    MINUS           reduce using rule 32 (arithmetic_expression -> expression_term .)
    LOWEREQUAL      reduce using rule 32 (arithmetic_expression -> expression_term .)
    GREATEREQUAL    reduce using rule 32 (arithmetic_expression -> expression_term .)
    LOWERTHEN       reduce using rule 32 (arithmetic_expression -> expression_term .)
    GREATERTHEN     reduce using rule 32 (arithmetic_expression -> expression_term .)
    EQUAL           reduce using rule 32 (arithmetic_expression -> expression_term .)
    NOTEQUAL        reduce using rule 32 (arithmetic_expression -> expression_term .)
    DO              reduce using rule 32 (arithmetic_expression -> expression_term .)
    DOT             reduce using rule 32 (arithmetic_expression -> expression_term .)
    THEN            reduce using rule 32 (arithmetic_expression -> expression_term .)
    RIGHTPARENTHESIS reduce using rule 32 (arithmetic_expression -> expression_term .)
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 11

    term_arithmetic_operation      shift and go to state 32

state 13

    (28) expression -> comparison .
    (29) comparison -> comparison . relational_inequality_operation arithmetic_expression
    (23) relational_inequality_operation -> . LOWEREQUAL
    (24) relational_inequality_operation -> . GREATEREQUAL
    (25) relational_inequality_operation -> . LOWERTHEN
    (26) relational_inequality_operation -> . GREATERTHEN

    RIGHTPARENTHESIS reduce using rule 28 (expression -> comparison .)
    EQUAL           reduce using rule 28 (expression -> comparison .)
    NOTEQUAL        reduce using rule 28 (expression -> comparison .)
    THEN            reduce using rule 28 (expression -> comparison .)
    DOT             reduce using rule 28 (expression -> comparison .)
    DO              reduce using rule 28 (expression -> comparison .)
    LOWEREQUAL      shift and go to state 36
    GREATEREQUAL    shift and go to state 35
    LOWERTHEN       shift and go to state 34
    GREATERTHEN     shift and go to state 37

    relational_inequality_operation shift and go to state 33

state 14

    (9) value -> term_arithmetic_operation . ID
    (12) value -> term_arithmetic_operation . INTEGER
    (15) value -> term_arithmetic_operation . REAL

    ID              shift and go to state 40
    INTEGER         shift and go to state 39
    REAL            shift and go to state 38


state 15

    (17) sign_arithmetic_operation -> PLUS .

    ID              reduce using rule 17 (sign_arithmetic_operation -> PLUS .)
    INTEGER         reduce using rule 17 (sign_arithmetic_operation -> PLUS .)
    REAL            reduce using rule 17 (sign_arithmetic_operation -> PLUS .)
    LEFTPARENTHESIS reduce using rule 17 (sign_arithmetic_operation -> PLUS .)
    PLUS            reduce using rule 17 (sign_arithmetic_operation -> PLUS .)
    MINUS           reduce using rule 17 (sign_arithmetic_operation -> PLUS .)
    TIMES           reduce using rule 17 (sign_arithmetic_operation -> PLUS .)
    DIVIDE          reduce using rule 17 (sign_arithmetic_operation -> PLUS .)


state 16

    (8) value -> sign_arithmetic_operation . ID
    (11) value -> sign_arithmetic_operation . INTEGER
    (14) value -> sign_arithmetic_operation . REAL

    ID              shift and go to state 42
    INTEGER         shift and go to state 43
    REAL            shift and go to state 41


state 17

    (18) sign_arithmetic_operation -> MINUS .

    ID              reduce using rule 18 (sign_arithmetic_operation -> MINUS .)
    INTEGER         reduce using rule 18 (sign_arithmetic_operation -> MINUS .)
    REAL            reduce using rule 18 (sign_arithmetic_operation -> MINUS .)
    LEFTPARENTHESIS reduce using rule 18 (sign_arithmetic_operation -> MINUS .)
    PLUS            reduce using rule 18 (sign_arithmetic_operation -> MINUS .)
    MINUS           reduce using rule 18 (sign_arithmetic_operation -> MINUS .)
    TIMES           reduce using rule 18 (sign_arithmetic_operation -> MINUS .)
    DIVIDE          reduce using rule 18 (sign_arithmetic_operation -> MINUS .)


state 18

    (44) instruction -> while_start while_expression . while_body
    (43) while_body -> . DO statements DONE DOT

    DO              shift and go to state 44

    while_body                     shift and go to state 45

state 19

    (16) value -> LEFTPARENTHESIS . expression RIGHTPARENTHESIS
    (27) expression -> . expression relational_equality_operation comparison
    (28) expression -> . comparison
    (29) comparison -> . comparison relational_inequality_operation arithmetic_expression
    (30) comparison -> . arithmetic_expression
    (31) arithmetic_expression -> . arithmetic_expression sign_arithmetic_operation expression_term
    (32) arithmetic_expression -> . expression_term
    (33) expression_term -> . expression_term term_arithmetic_operation value
    (34) expression_term -> . value
    (7) value -> . ID
    (8) value -> . sign_arithmetic_operation ID
    (9) value -> . term_arithmetic_operation ID
    (10) value -> . INTEGER
    (11) value -> . sign_arithmetic_operation INTEGER
    (12) value -> . term_arithmetic_operation INTEGER
    (13) value -> . REAL
    (14) value -> . sign_arithmetic_operation REAL
    (15) value -> . term_arithmetic_operation REAL
    (16) value -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (17) sign_arithmetic_operation -> . PLUS
    (18) sign_arithmetic_operation -> . MINUS
    (19) term_arithmetic_operation -> . TIMES
    (20) term_arithmetic_operation -> . DIVIDE

    ID              shift and go to state 25
    INTEGER         shift and go to state 21
    REAL            shift and go to state 22
    LEFTPARENTHESIS shift and go to state 19
    PLUS            shift and go to state 15
    MINUS           shift and go to state 17
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 11

    arithmetic_expression          shift and go to state 10
    comparison                     shift and go to state 13
    expression_term                shift and go to state 12
    sign_arithmetic_operation      shift and go to state 16
    term_arithmetic_operation      shift and go to state 14
    value                          shift and go to state 23
    expression                     shift and go to state 46

state 20

    (19) term_arithmetic_operation -> TIMES .

    ID              reduce using rule 19 (term_arithmetic_operation -> TIMES .)
    INTEGER         reduce using rule 19 (term_arithmetic_operation -> TIMES .)
    REAL            reduce using rule 19 (term_arithmetic_operation -> TIMES .)
    LEFTPARENTHESIS reduce using rule 19 (term_arithmetic_operation -> TIMES .)
    PLUS            reduce using rule 19 (term_arithmetic_operation -> TIMES .)
    MINUS           reduce using rule 19 (term_arithmetic_operation -> TIMES .)
    TIMES           reduce using rule 19 (term_arithmetic_operation -> TIMES .)
    DIVIDE          reduce using rule 19 (term_arithmetic_operation -> TIMES .)


state 21

    (10) value -> INTEGER .

    TIMES           reduce using rule 10 (value -> INTEGER .)
    DIVIDE          reduce using rule 10 (value -> INTEGER .)
    PLUS            reduce using rule 10 (value -> INTEGER .)
    MINUS           reduce using rule 10 (value -> INTEGER .)
    LOWEREQUAL      reduce using rule 10 (value -> INTEGER .)
    GREATEREQUAL    reduce using rule 10 (value -> INTEGER .)
    LOWERTHEN       reduce using rule 10 (value -> INTEGER .)
    GREATERTHEN     reduce using rule 10 (value -> INTEGER .)
    RIGHTPARENTHESIS reduce using rule 10 (value -> INTEGER .)
    EQUAL           reduce using rule 10 (value -> INTEGER .)
    NOTEQUAL        reduce using rule 10 (value -> INTEGER .)
    DOT             reduce using rule 10 (value -> INTEGER .)
    DO              reduce using rule 10 (value -> INTEGER .)
    THEN            reduce using rule 10 (value -> INTEGER .)


state 22

    (13) value -> REAL .

    TIMES           reduce using rule 13 (value -> REAL .)
    DIVIDE          reduce using rule 13 (value -> REAL .)
    PLUS            reduce using rule 13 (value -> REAL .)
    MINUS           reduce using rule 13 (value -> REAL .)
    LOWEREQUAL      reduce using rule 13 (value -> REAL .)
    GREATEREQUAL    reduce using rule 13 (value -> REAL .)
    LOWERTHEN       reduce using rule 13 (value -> REAL .)
    GREATERTHEN     reduce using rule 13 (value -> REAL .)
    RIGHTPARENTHESIS reduce using rule 13 (value -> REAL .)
    EQUAL           reduce using rule 13 (value -> REAL .)
    NOTEQUAL        reduce using rule 13 (value -> REAL .)
    DOT             reduce using rule 13 (value -> REAL .)
    DO              reduce using rule 13 (value -> REAL .)
    THEN            reduce using rule 13 (value -> REAL .)


state 23

    (34) expression_term -> value .

    TIMES           reduce using rule 34 (expression_term -> value .)
    DIVIDE          reduce using rule 34 (expression_term -> value .)
    PLUS            reduce using rule 34 (expression_term -> value .)
    MINUS           reduce using rule 34 (expression_term -> value .)
    LOWEREQUAL      reduce using rule 34 (expression_term -> value .)
    GREATEREQUAL    reduce using rule 34 (expression_term -> value .)
    LOWERTHEN       reduce using rule 34 (expression_term -> value .)
    GREATERTHEN     reduce using rule 34 (expression_term -> value .)
    DOT             reduce using rule 34 (expression_term -> value .)
    EQUAL           reduce using rule 34 (expression_term -> value .)
    NOTEQUAL        reduce using rule 34 (expression_term -> value .)
    DO              reduce using rule 34 (expression_term -> value .)
    THEN            reduce using rule 34 (expression_term -> value .)
    RIGHTPARENTHESIS reduce using rule 34 (expression_term -> value .)


state 24

    (42) while_expression -> expression .
    (27) expression -> expression . relational_equality_operation comparison
    (21) relational_equality_operation -> . EQUAL
    (22) relational_equality_operation -> . NOTEQUAL

    DO              reduce using rule 42 (while_expression -> expression .)
    EQUAL           shift and go to state 49
    NOTEQUAL        shift and go to state 47

    relational_equality_operation  shift and go to state 48

state 25

    (7) value -> ID .

    TIMES           reduce using rule 7 (value -> ID .)
    DIVIDE          reduce using rule 7 (value -> ID .)
    PLUS            reduce using rule 7 (value -> ID .)
    MINUS           reduce using rule 7 (value -> ID .)
    LOWEREQUAL      reduce using rule 7 (value -> ID .)
    GREATEREQUAL    reduce using rule 7 (value -> ID .)
    LOWERTHEN       reduce using rule 7 (value -> ID .)
    GREATERTHEN     reduce using rule 7 (value -> ID .)
    RIGHTPARENTHESIS reduce using rule 7 (value -> ID .)
    EQUAL           reduce using rule 7 (value -> ID .)
    NOTEQUAL        reduce using rule 7 (value -> ID .)
    DOT             reduce using rule 7 (value -> ID .)
    DO              reduce using rule 7 (value -> ID .)
    THEN            reduce using rule 7 (value -> ID .)


state 26

    (4) statements -> statements instruction .

    END             reduce using rule 4 (statements -> statements instruction .)
    PRINT           reduce using rule 4 (statements -> statements instruction .)
    ID              reduce using rule 4 (statements -> statements instruction .)
    IF              reduce using rule 4 (statements -> statements instruction .)
    WHILE           reduce using rule 4 (statements -> statements instruction .)
    DONE            reduce using rule 4 (statements -> statements instruction .)
    $end            reduce using rule 4 (statements -> statements instruction .)


state 27

    (5) instruction -> PRINT expression . DOT
    (27) expression -> expression . relational_equality_operation comparison
    (21) relational_equality_operation -> . EQUAL
    (22) relational_equality_operation -> . NOTEQUAL

    DOT             shift and go to state 50
    EQUAL           shift and go to state 49
    NOTEQUAL        shift and go to state 47

    relational_equality_operation  shift and go to state 48

state 28

    (39) instruction -> if_start if_expression . if_then_begin statements END DOT
    (40) instruction -> if_start if_expression . if_then_begin statements END if_else_begin statements END DOT
    (37) if_then_begin -> . THEN BEGIN

    THEN            shift and go to state 51

    if_then_begin                  shift and go to state 52

state 29

    (36) if_expression -> expression .
    (27) expression -> expression . relational_equality_operation comparison
    (21) relational_equality_operation -> . EQUAL
    (22) relational_equality_operation -> . NOTEQUAL

    THEN            reduce using rule 36 (if_expression -> expression .)
    EQUAL           shift and go to state 49
    NOTEQUAL        shift and go to state 47

    relational_equality_operation  shift and go to state 48

state 30

    (6) instruction -> ID ASSIGN . expression DOT
    (27) expression -> . expression relational_equality_operation comparison
    (28) expression -> . comparison
    (29) comparison -> . comparison relational_inequality_operation arithmetic_expression
    (30) comparison -> . arithmetic_expression
    (31) arithmetic_expression -> . arithmetic_expression sign_arithmetic_operation expression_term
    (32) arithmetic_expression -> . expression_term
    (33) expression_term -> . expression_term term_arithmetic_operation value
    (34) expression_term -> . value
    (7) value -> . ID
    (8) value -> . sign_arithmetic_operation ID
    (9) value -> . term_arithmetic_operation ID
    (10) value -> . INTEGER
    (11) value -> . sign_arithmetic_operation INTEGER
    (12) value -> . term_arithmetic_operation INTEGER
    (13) value -> . REAL
    (14) value -> . sign_arithmetic_operation REAL
    (15) value -> . term_arithmetic_operation REAL
    (16) value -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (17) sign_arithmetic_operation -> . PLUS
    (18) sign_arithmetic_operation -> . MINUS
    (19) term_arithmetic_operation -> . TIMES
    (20) term_arithmetic_operation -> . DIVIDE

    ID              shift and go to state 25
    INTEGER         shift and go to state 21
    REAL            shift and go to state 22
    LEFTPARENTHESIS shift and go to state 19
    PLUS            shift and go to state 15
    MINUS           shift and go to state 17
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 11

    arithmetic_expression          shift and go to state 10
    comparison                     shift and go to state 13
    expression_term                shift and go to state 12
    sign_arithmetic_operation      shift and go to state 16
    term_arithmetic_operation      shift and go to state 14
    value                          shift and go to state 23
    expression                     shift and go to state 53

state 31

    (31) arithmetic_expression -> arithmetic_expression sign_arithmetic_operation . expression_term
    (33) expression_term -> . expression_term term_arithmetic_operation value
    (34) expression_term -> . value
    (7) value -> . ID
    (8) value -> . sign_arithmetic_operation ID
    (9) value -> . term_arithmetic_operation ID
    (10) value -> . INTEGER
    (11) value -> . sign_arithmetic_operation INTEGER
    (12) value -> . term_arithmetic_operation INTEGER
    (13) value -> . REAL
    (14) value -> . sign_arithmetic_operation REAL
    (15) value -> . term_arithmetic_operation REAL
    (16) value -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (17) sign_arithmetic_operation -> . PLUS
    (18) sign_arithmetic_operation -> . MINUS
    (19) term_arithmetic_operation -> . TIMES
    (20) term_arithmetic_operation -> . DIVIDE

    ID              shift and go to state 25
    INTEGER         shift and go to state 21
    REAL            shift and go to state 22
    LEFTPARENTHESIS shift and go to state 19
    PLUS            shift and go to state 15
    MINUS           shift and go to state 17
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 11

    sign_arithmetic_operation      shift and go to state 16
    expression_term                shift and go to state 54
    value                          shift and go to state 23
    term_arithmetic_operation      shift and go to state 14

state 32

    (33) expression_term -> expression_term term_arithmetic_operation . value
    (7) value -> . ID
    (8) value -> . sign_arithmetic_operation ID
    (9) value -> . term_arithmetic_operation ID
    (10) value -> . INTEGER
    (11) value -> . sign_arithmetic_operation INTEGER
    (12) value -> . term_arithmetic_operation INTEGER
    (13) value -> . REAL
    (14) value -> . sign_arithmetic_operation REAL
    (15) value -> . term_arithmetic_operation REAL
    (16) value -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (17) sign_arithmetic_operation -> . PLUS
    (18) sign_arithmetic_operation -> . MINUS
    (19) term_arithmetic_operation -> . TIMES
    (20) term_arithmetic_operation -> . DIVIDE

    ID              shift and go to state 25
    INTEGER         shift and go to state 21
    REAL            shift and go to state 22
    LEFTPARENTHESIS shift and go to state 19
    PLUS            shift and go to state 15
    MINUS           shift and go to state 17
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 11

    sign_arithmetic_operation      shift and go to state 16
    value                          shift and go to state 55
    term_arithmetic_operation      shift and go to state 14

state 33

    (29) comparison -> comparison relational_inequality_operation . arithmetic_expression
    (31) arithmetic_expression -> . arithmetic_expression sign_arithmetic_operation expression_term
    (32) arithmetic_expression -> . expression_term
    (33) expression_term -> . expression_term term_arithmetic_operation value
    (34) expression_term -> . value
    (7) value -> . ID
    (8) value -> . sign_arithmetic_operation ID
    (9) value -> . term_arithmetic_operation ID
    (10) value -> . INTEGER
    (11) value -> . sign_arithmetic_operation INTEGER
    (12) value -> . term_arithmetic_operation INTEGER
    (13) value -> . REAL
    (14) value -> . sign_arithmetic_operation REAL
    (15) value -> . term_arithmetic_operation REAL
    (16) value -> . LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (17) sign_arithmetic_operation -> . PLUS
    (18) sign_arithmetic_operation -> . MINUS
    (19) term_arithmetic_operation -> . TIMES
    (20) term_arithmetic_operation -> . DIVIDE

    ID              shift and go to state 25
    INTEGER         shift and go to state 21
    REAL            shift and go to state 22
    LEFTPARENTHESIS shift and go to state 19
    PLUS            shift and go to state 15
    MINUS           shift and go to state 17
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 11
